--- a/Google Colab Files/Solutions_Section_2.ipynb
+++ b/Google Colab Files/Solutions_Section_2.ipynb
@@ -1809,6 +1809,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 10.4: The Double Pendulum.\n",
+    "\n",
+    "![Image in a markdown cell](https://upload.wikimedia.org/wikipedia/commons/7/78/Double-Pendulum.svg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -2474,7 +2483,13 @@
     "id": "fMplXpaorzKG"
    },
    "source": [
-    "# Chapter 13: Numerical Methods for ODEs and PDEs"
+    "# Chapter 13: Numerical Methods for ODEs and PDEs\n",
+    "\n",
+    "Exercises 13.1 and 13.2: Use the implicit Euler method (Exercise 13.1) and the two-step Adams-Bashforth method (Exercise 13.2) to solve the initial value problem:\n",
+    "\n",
+    "$$\\frac{dy}{dx}=(x-3.2)y+8x\\exp\\left(\\frac{(x-3.2)^2}{2} \\right)\\cos(4x^2),$$\n",
+    "\n",
+    "given that $x_0=0, y_0=1, h=0.1$ and $0 \\leq x \\leq 5$."
    ]
   },
   {
